crates/ridge-parser/tests/fixtures/errors/p001_let_missing_eq.ridge
-- expect: P001
-- Trigger: let binding missing `=`.
fn f =
    let x 42
